@@ -5,6 +5,8 @@ Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
 
  * added #1= style labelled forms to the reader
 
+ * mlib: added values as a place for setf
+
  * transform the innermost tail recursion/ named let/ let* /letrec into a loop
 
 
